issued/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mangareader-service
spec:
  selector:
    app: mangareader
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
